# Mava

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  DETAILED_INSTALL.md  Dockerfile  Dockerfile.robocup  Dockerfile.sc2  Dockerfile.tf  LICENSE  Makefile  OPTIONAL_INSTALL.md  Quickstart.ipynb  README.md  TROUBLESHOOTING.md  codecov.yml  hyperparams_tune.sh  install_robocup.sh  install_sc2.sh  license_header.txt  mkdocs.yml  mypy.ini  ppo_anakin_cleaner_params.pkl  pyproject.toml  run.sh  run_sweep.sh  setup.cfg  setup.py  startup.sh  sweep_run.sh  test.sh  test_init_network_shapes.py
.github/: CODEOWNERS  codecov.yml  pull_request_template.md
bash_scripts/: check_format.sh  install_meltingpot.sh  install_record.sh  install_robocup.sh  install_sc2.sh  jax_tests.sh  local_tests.sh  local_tests_venv.sh  startup_screen.sh  tests.sh  tf_tests.sh
docs/: 404.html  CNAME  DETAILED_INSTALL.md  Gemfile  JEKYLL_README.md  OPTIONAL_INSTALL.md  TROUBLESHOOTING.md  _config.yml  add_doc.md  annotation.md  architectures.md  benchmarks.md  config.md  create_component.md  create_system.md  detailed_comparison.md  environments.md  examples.md  gotchas.md  index.md  jumaji_rware_comparison.md  jumanji_rware_comparison.md  losses.md  modules.md  overview.md  performance_evaluation.md  requirements.txt  smax_benchmark.md  smax_benchmarking.md  store.md  systems.md  user_guide.md
educational/: Dockerfile  Makefile  README.md  random_agent.py  requirements.txt  template.py
examples/: Quickstart.ipynb  README.md  quickstart.ipynb  run_dial.py
jax_distribution/: README.md  debug_tpu.py  evaluator.py  logger.py  requirements.txt  types.py
mava/: __init__.py  _metadata.py  constants.py  core.py  core_jax.py  core_jax_test.py  distributions.py  environment_loop.py  evaluator.py  evaluator_idqn.py  evaluator_rec_idqn.py  logger.py  networks.py  new_networks.py  specs.py  (+3 more)
(+1740 files in other folders)
